--- a/resources/assets/sass/styles/search-nav.scss
+++ b/resources/assets/sass/styles/search-nav.scss
@@ -31,7 +31,7 @@
       top: 12px;
       left: $spacing-horizontal--small * 2;
       font-size: 18px;
-      color: darken($color--mine-shaft, 7%);
+      color: $color--white;
     }
 
     &.search--active {
